syntax = "proto3";

package alerting;

import "google/protobuf/descriptor.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/open-panoptes/opni/pkg/apis/alerting/v1";

message ConditionReference {
  string id = 1;
  // empty string represents the default group
  string groupId = 2;
}

message ConditionReferenceList {
  repeated ConditionReference items = 1;
}

// ------------------ ENDPOINT ------------------

enum OpniSeverity {
  Info     = 0;
  Warning  = 1;
  Error    = 2;
  Critical = 3;
}

enum GoldenSignal {
  Custom     = 0;
  Errors     = 1;
  Saturation = 2;
  Traffic    = 3;
  Latency    = 4;
}

message CachedState {
  bool                      healthy   = 1;
  bool                      firing    = 2;
  google.protobuf.Timestamp timestamp = 3;
  map<string, string>       metadata  = 4;
}

message IncidentIntervals {
  repeated Interval items = 1;
}

message Interval {
  google.protobuf.Timestamp start        = 1;
  google.protobuf.Timestamp end          = 2;
  repeated string           fingerprints = 3;
}
