syntax = "proto3";

package opensearch;

option go_package = "github.com/open-panoptes/opni/plugins/logging/apis/opensearch";

service Opensearch {
  rpc GetDetails(ClusterReference) returns (OpensearchDetails);
}

message ClusterReference {
  string AuthorizedClusterID = 1;
}

message OpensearchDetails {
  string Username       = 1;
  string Password       = 2;
  string ExternalURL    = 3;
  bool   TracingEnabled = 4;
}
